# Code_Sandbox

./: .gitignore  .gitmodules  README  figure_builder.py
JVL/: build.xml
c++/cli/: .gitignore  CMakeLists.txt
c++/cli/data/: CLI_Manager_Configuration.xml  Command_Configuration.xml
c++/cli/src/: CMakeLists.txt  main.cpp
c++/cli/src/app/: CMakeLists.txt  main.cpp
c++/cli/src/cli/: A_CLI_Command_Queue.cpp  A_CLI_Configuration_File_Parser.cpp  A_CLI_Configuration_File_Parser.hpp  A_CLI_Connection_Handler_Base.cpp  A_CLI_Connection_Handler_Base.hpp  A_CLI_Connection_Handler_Local.cpp  A_CLI_Connection_Handler_Local.hpp  A_CLI_Connection_Handler_Local_Config.hpp  A_CLI_Connection_Handler_Socket.cpp  A_CLI_Connection_Handler_Socket.hpp  A_CLI_Connection_Handler_Socket_Config.cpp  A_CLI_Connection_Handler_Socket_Config.hpp  A_CLI_Manager.cpp  A_CLI_Manager.hpp  A_CLI_Manager_Configuration.cpp  A_CLI_Manager_Configuration.hpp  A_CLI_Manager_Factory.cpp  A_CLI_Manager_Factory.hpp  A_Command_History_Entry.hpp  A_Command_Response_Handler_Base.hpp  A_Console_Render_Manager.cpp  A_Console_Render_Manager.hpp  A_Console_Render_Manager_ASCII.cpp  A_Console_Render_Manager_NCurses.cpp  A_Console_Render_State.cpp  A_Console_Render_State.hpp  A_Demo_Command_Response_Handler.hpp  CLIConnectionType.cpp  CLIConnectionType.hpp
c++/cli/src/lib/: CMakeLists.txt  cli_cpp.hpp
c++/cli/src/utils/: ANSI_Utilities.hpp
c++/edid-parser/: CMakeLists.txt  edid_config.xml
c++/edid-parser/src/: EDID_Container.cpp  EDID_Container.hpp  String_Utilities.cpp  String_Utilities.hpp  main.cpp
c++/liblas/: CMakeLists.txt
c++/liblas/src/: GridBuilder.cpp  GridBuilder.hpp  GridMarker.cpp  GridMarker.hpp  PointExtractor.hpp  main.cpp
c++/libvnc/: .gitignore  CMakeLists.txt
c++/libvnc/cmake/Modules/: FindLibVncServer.cmake
c++/libvnc/common/: Parser.cpp  Parser.hpp
c++/libvnc/data/: simple-server.cfg
c++/libvnc/simple-server/: CMakeLists.txt  Options.cpp  Options.hpp  Server_Context.hpp  simple-server.cpp
c++/opencl/coordinate_converter/: CMakeLists.txt  README.md
c++/opencl/coordinate_converter/data/: Coordinate_Conversion_Data.xml
c++/opencl/coordinate_converter/src/: CMakeLists.txt
c++/opencl/coordinate_converter/tests/: CMakeLists.txt  Coordinate_Test_Data.hpp  TEST_libConvert01.cpp  TEST_libConvert02.cpp
c++/time-utility/src/: CMakeLists.txt
c++/time-utility/src/lib/: CMakeLists.txt  File_Utilities.hpp  GPS_Time.cpp  GPS_Time.hpp  Leap_Second_Table.hpp  Time_Constants.hpp  Time_Conversions.cpp
c++/wms-fetch/: CMakeLists.txt  Makefile
c++/wms-fetch/src/: WMS_Connection.hpp  WMS_Request.hpp
cpp/cpp23-demos/: CMakeLists.txt
cpp/memtracker/: CMakeLists.txt  README.md  build.sh  conanfile.txt
cpp/memtracker/src/: main.cpp
cpp/memtracker/src/memtracker/: MemoryTracker.cpp  MemoryTracker.hpp  Result.hpp  ThreadSafeQueue.hpp
cpp/opencl/coordinate_converter/tests/: CMakeLists.txt  Coordinate_Test_Data.cpp  coordinate-test.cpp
cpp/opengl/image-display-tool/: CMakeLists.txt
cpp/opengl/image-display-tool/src/: OpenGL_Utilities.hpp
cpp/time-utility/: .gitignore  CMakeLists.txt
cpp/time-utility/src/lib/: CMakeLists.txt  File_Utilities.cpp  Leap_Second_Table.cpp  TimeUtilities.hpp  Time_Conversions.hpp
geographic/arcgis-qt-samples/simple-viewer-widget/: CMakeLists.txt  Main_Window.cpp  Main_Window.hpp  simple-viewer.cpp
geographic/geo_image/: .gitignore  CMakeLists.txt  Makefile
geographic/geo_image/cmake/Modules/: FindOpenCV.cmake
geographic/geo_image/docs/examples/: .gitignore  GS2_Header_Demo.cpp  Makefile  advanced_geoimage.cpp  coordinate_conversion.cpp  simple_writer.cpp
geographic/geo_image/docs/notes/: .gitignore  CommonProgramsAndUsage.tex
geographic/geo_image/docs/user_guide/: user_guide.tex
geographic/geo_image/python/: GeoCalibration.py  GeoViewer.py  OrthoProjector.py  ortho_test.py
geographic/geo_image/scripts/: git_update.sh  release_packager.sh
geographic/geo_image/src/: CMakeLists.txt  GeoImage.dox  GeoImage.hpp
geographic/geo_image/src/coordinates/: CMakeLists.txt  Conversion_Utilities.cpp  Conversion_Utilities.hpp  CoordinateBase.cpp  CoordinateLatLon.cpp  CoordinateLatLon.hpp  CoordinateUTM.cpp  CoordinateUTM.h  CoordinateUTM.hpp  Coordinate_Math.cpp  Coordinate_Math.hpp  Datum.cpp  Datum.hpp
geographic/geo_image/src/core/: CMakeLists.txt  Enumerations.hpp  GeoImage_Version.hpp  GeoImage_Version.hpp.in
geographic/geo_image/src/dem/: CMakeLists.txt  DEM.cpp  DEM.h  DEM.hpp
geographic/geo_image/tests/: Makefile  unit_test.cpp
geographic/image-browser/: .gitignore  CMakeLists.txt  README  image-browser.pro
geographic/image-browser/scripts/: ImageBrowser.bash  builder.bash  builder.bat
geographic/image-browser/src/: geo-data-manager.cpp  imagebrowser.cpp
geographic/simple-stitch/: CMakeLists.txt
geographic/simple-stitch/src/: Frame_Set.cpp  Frame_Set.hpp  Options.cpp  Options.hpp  main.cpp
mpi/: .gitignore  CMakeLists.txt  Makefile  build.sh  mpi-dynamic-windows-01.cpp
mpi/common/: Print_Utilities.cpp  Print_Utilities.hpp
mpi/dynamic-windows/: CMakeLists.txt  mpi-dynamic-windows-02.cpp
mpi/fault-tolerance/: CMakeLists.txt  Connection_Listener.cpp  Connection_Listener.hpp  fault-tolerance-demo-01-master.cpp  fault-tolerance-demo-01-slave.cpp  fault-tolerance-demo-01.cpp  run-fault-tolerance-demo-01.sh
mpi/hello_world/: CMakeLists.txt  boilerplate-mpi.cpp
mpi/other_examples/: CMakeLists.txt  denio_comm_connect_demo.cpp
opencv/cpp/stab-checker/: CMakeLists.txt  Interface.cpp  Interface.hpp  Options.cpp  Options.hpp  Point_Info.cpp  Point_Info.hpp  String_Utilities.cpp  stabilization-checker.cpp
opencv/cpp/stab-demo/: CMakeLists.txt  Frame_Info.cpp  Frame_Info.hpp  Frame_Loader.cpp  Frame_Loader.hpp  Log_Utilities.cpp  Log_Utilities.hpp  Options.cpp  Options.hpp  README.md  String_Utilities.hpp  opencv_optflow_demo.cpp  opencv_video_stab.cpp  stabilization-demo.cpp
windows/sample-vpp-projects/sample-gui/: .gitignore  CMakeLists.txt  CMakeSettings.json  build-package.ps1  build-settings.json  runner.ps1
(+1266 files in other folders)
