#    File:    CMakeLists.txt
#    Author:  Marvin Smith
#    Date:    10/19/2015
#
#    Purpose:  Constructs the Time-Utility Application
#

#----------------------------------------#
#-        Set the CMake Version         -#
#----------------------------------------#
cmake_minimum_required( VERSION 2.8 FATAL_ERROR )


#----------------------------------------#
#-          Set the Project Name        -#
#----------------------------------------#
project(tile-utility)


#--------------------------------#
#-      Add the Sources         -#
#--------------------------------#
add_subdirectory(src)

