#    File:    CMakeLists.txt
#    Author:  Marvin Smith
#    Date:    10/19/2015
#
#    Purpose:  Constructs the Time-Utility Library and Application
#

#---------------------------------#
#-     Build the Application     -#
#---------------------------------#
add_subdirectory(bin)


#----------------------------#
#-    Build the Library     -#
#----------------------------#
add_subdirectory(lib)

